[package]
name = "todoist"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = { version = "1.0" }
serde = { version = "1.0", features = ["derive"] }
clap = { version = "3.1.5", features = ["derive"] }
figment = { version = "0.10", features = ["yaml", "env"] }
dirs = "4.0"

[[bin]]
name = "todoist"
path = "src/bin/main.rs"
